# wex-platform-2026

./: .env.example  .gitignore  Completion_V1.md  Makefile  SETUP.md  WEx Platform 2026.code-workspace  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .gcloudignore  Dockerfile  clear_sms_data.py  clear_voice_data.py  create_vapi_assistant.ps1  push_full_assistant.py  pyproject.toml  qc_api_tests.py  qc_e2e_tests.py  qc_seed.py  switch_to_groq.py  test_live_escalation.py  test_sms_flow.py  update_assistant_full.py  update_vapi_assistant_full.ps1
backend/scripts/: backfill_coordinates.py
backend/src/wex_platform/: __init__.py
backend/src/wex_platform/agents/: activation_agent.py  base.py  buyer_agent.py  buyer_sms_agent.py  clearing_agent.py  description_agent.py  market_rate_agent.py  memory_agent.py  pricing_agent.py  property_insight_agent.py  property_search_agent.py  settlement_agent.py
backend/src/wex_platform/agents/prompts/: activation.py  buyer.py  clearing.py  market_rate.py  memory.py  pricing.py  property_insight.py  property_search.py  settlement.py
backend/src/wex_platform/agents/sms/: __init__.py  context_builder.py  contracts.py  criteria_agent.py  fallback_templates.py  faq_knowledge.py  field_catalog.py  gatekeeper.py  message_interpreter.py  polisher_agent.py  response_agent.py  status_messages.py  topic_catalog.py
backend/src/wex_platform/agents/voice/: gatekeeper.py
backend/src/wex_platform/app/: config.py  main.py
backend/src/wex_platform/app/routes/: admin.py  admin_engagements.py  agreements.py  auth.py  browse.py  buyer.py  buyer_sms.py  clearing.py  dla.py  engagement.py  enrichment.py  qa.py  scheduler_jobs.py  search.py  seed_engagements.py  sms.py  sms_guarantee.py  sms_optin.py  sms_reply_tool.py  sms_scheduler.py  supplier.py  supplier_dashboard.py  vapi_webhook.py  ws.py
backend/src/wex_platform/domain/: enums.py  models.py  schemas.py  sms_enums.py  sms_models.py  voice_models.py
backend/src/wex_platform/infra/: database.py  gemini_client.py
backend/src/wex_platform/services/: address_lookup.py  auth_service.py  backfill_properties.py  background_jobs.py  buyer_conversation_service.py  buyer_notification_service.py  buyer_sms_orchestrator.py  clearing_engine.py  confidence_calculator.py  description_service.py  dla_service.py  email_service.py  engagement_bridge.py  engagement_state_machine.py  enrichment_service.py  escalation_service.py  geocoding_service.py  hold_monitor.py  intake_extractor.py  match_scorer.py  pricing_engine.py  profile_service.py  property_insight_service.py  property_serializer.py  property_service.py  settlement_service.py  sms_detail_fetcher.py  sms_scheduler.py  sms_service.py  sms_token_service.py  timezone_utils.py  use_type_compat.py  validation_service.py  vapi_assistant_config.py  voice_tool_handlers.py  waitlist_service.py
backend/tests/: conftest.py  test_clearing_engine_prefilter.py  test_cross_channel_unification.py  test_engagement_state_machine.py  test_geocoding_service.py  test_intake_extractor.py  test_llm_schema_enforcement.py  test_match_scorer.py  test_property_insight.py  test_property_insight_e2e.py  test_use_type_compat.py  verify_scoring_e2e.py
backend/tests/sms/: test_buyer_sms_webhook.py  test_detail_fetcher.py  test_engagement_bridge.py  test_escalation_service.py  test_gatekeeper.py  test_journeys.py  test_message_interpreter.py  test_notifications.py  test_orchestrator.py  test_reply_tool.py  test_scheduler.py  test_sms_models.py  test_token_service.py
docs/: API-Test-Plan.md  Browse-Address-Lookup-Implementation.md  Google-Cloud-Hosting.md  QC-Test-Results.md  SMS-Voice-Buyer-Journey-Architecture.md  SMS-Voice-Buyer-Journey-Improvement-Plan.md  WEx-CrossChannel-UniversalEscalation-Plan.md  WEx-Demand-Led-Activation.md  WEx-Match-Scoring.md  WEx-Ownership-Model-Spec.md  WEx-PropertyInsight-System-Plan.md  WEx-Supplier-Dashboard-Spec.md  WEx-Technical-Overview-CTO.md  WEx_Database_Architecture_Spec.docx  clear-calls-and-sms.md  gcp-hosting-plan.md
(+105 files in other folders)
